@@ -5,6 +5,8 @@ Revision history for Net-XMPP2
          - implemented support for old-style (tcp port 5223) SSL connections,
            use the old_style_ssl option for ::Connection to enable TLS handshaking
            upon TCP connect.
+         - added $message argument to subscription related events. the contents
+           comes from the <status> elements in the presence stanza.
 
 0.3 Mon Jan 28 23:00:58 CET 2009
          - fixed a bug in disconnect error reporting.
